--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.22",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "pm2": "^3.5.0"
   }
 }
